customer/k8s/aws/istio/customer-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerinfo
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/customer-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer-service
        port:
          number: 8080
